test-suite/typecheck/fail/duplicate_variable.first
function f() -> Int {
  let x: Int = 1;
  let x: Int = 2;
  return x;
}
